@@ -3,7 +3,7 @@ Version=1.0
 Type=Application
 MimeType=application/xml
 Terminal=false
-Exec=sh -c "f=%f;"' if [ -f "$f" ]; then gsequencer --filename $f; else gsequencer; fi'
+Exec=gsequencer --filename $f
 Icon=@datadir@/gsequencer/icons/ags.png
 Name=Advanced Gtk+ Sequencer
 GenericName=Sequencer
